# twenty-forty-eight

./: .gitignore  2048.hs  README.md  twenty-forty-eight.cabal  twenty-forty-eight.hs
